[package]
name = "space_command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
strum = "0.24.1"
strum_macros = "0.24.3"
prost = "0.11"
prost-types = "0.11"


[build-dependencies]
prost-build = { version = "0.11" }